# Chowlet

./: .gitignore  README.md
backend/: index.ts  package.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/auth/: routes.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  school.py  user.py
backend/app/schemas/: auth.py
backend/app/services/: auth.py
backend/prisma/: schema.prisma  seed.ts
backend/prisma/migrations/20260607204541_init/: migration.sql
backend/scripts/: test_connection.py
backend/src/lib/: prisma.ts
backend/src/middleware/: auth.ts  authorize.ts
backend/src/routes/: profiles.ts  schools.ts  users.ts
docs/: README.md
